# zeri

./: .gitignore  .prettierrc.json  CONTRIBUTING.md  README.md  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
src/: App.ts  App.vue  app.d.ts  constants.ts  database.ts  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/icons/: MaximizeIcon.vue  MinimizeIcon.vue  RestoreIcon.vue  XIcon.vue  XUnableIcon.vue
src/components/window/: AppBar.vue  Main.vue  SideBar.vue
src/composables/: useTauriEvent.ts  useWindowEvent.ts
src/lib/: constants.ts  controls.ts  database.ts  types.ts
src/lib/components/icons/: AlbumsIcon.svelte  ArtistsIcon.svelte  HeartIcon.svelte  HomeIcon.svelte  LibraryIcon.svelte  MaximizeIcon.svelte  MinimizeIcon.svelte  NextIcon.svelte  NowPlayingIcon.svelte  PauseIcon.svelte  PlayIcon.svelte  PreviousIcon.svelte  XIcon.svelte  (+9 more)
src/lib/composables/: createWritableStore.ts  useTauriEvent.ts  useTooltip.ts  useWindowEvent.ts
src/lib/stores/: playerStore.ts  windowstore.ts
src/lib/utils/: audioUtils.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/Artists/: +page.svelte
src/routes/Liked/: +page.svelte
src/routes/Now-Playing/: +page.svelte
src/routes/Recents/: +page.svelte
src/stores/: navstore.ts  playerstore.ts  routerstore.ts  windowstore.ts
src/stores/__tests__/: navstore.spec.ts  routerstore.spec.ts
src/utils/: batchfn.ts  devtools.ts
(+5 files in other folders)
