[package]
name = "zeri"
version = "0.0.0"
description = "A Tauri App"
authors = ["Jorn Blaedel Cabrera Garbosa"]
license = "The Unlicense"
repository = "https://github.com/Zeri-App/zeri"
default-run = "zeri"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.1", features = ["dialog-ask", "dialog-message", "dialog-open", "fs-read-dir", "protocol-asset", "window-all"] }
mp3-duration = "0.1.10"
id3 = "1.7.0"
base64 = "0.21.5"
window-vibrancy = "0.4.0"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
